js-trials-2 partially complete

--- a/madlibs/templates/compliment.html
+++ b/madlibs/templates/compliment.html
@@ -9,10 +9,10 @@
     <form action="/game">
       <!-- Radio buttons to ask if user wants to play Madlibs -->
       Would you like to play a game?
-      <input type="radio" name="game" value="True">
+      <input type="radio" name="game" value=True>
       <label>Yes</label>
 
-      <input type="radio" name="game" value="False">
+      <input type="radio" name="game" value=False>
       <label>No</label>
 
       <!-- Submit button -->
