--- a/madlibs/templates/game.html
+++ b/madlibs/templates/game.html
@@ -7,12 +7,10 @@
 
      <form action="/madlib">
         <!-- Ask user to pick a person, a color, a noun, and an adjective -->
-        <label>Fill in these boxes</label>
-        <p>
+        <p>Fill in these boxes</p>
         <label>a name:</label>
         <input type="text" name="person">
-        <!-- <input type="submit"> -->
-        
+        <br>
         <!-- Drop down color menu -->
         <label>color:</label>
         <select name="color">
@@ -20,15 +18,14 @@
             <option value="blue">blue</option>
             <option value="yellow">yellow</option>
         </select>
-
+        <br>
         <label>a noun:</label>
         <input type="text" name="noun">
-
+        <br>
         <label>an adjective:</label>
         <input type="text" name="adjective">
-
+        <br>
         <input type="submit">
-        </p>
      </form>
 
     </body>
