--- a/madlibs/templates/madlib.html
+++ b/madlibs/templates/madlib.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <head></head>
 <body>
-There once was a {{ color }} {{ noun }} sitting in the Hackbright Lab. 
-When {{ person }} went to pick it up, it burst into flames in a totally
-{{{ adjective }}} way.
+    There once was a {{ color }} {{ noun }} sitting in the Hackbright Lab. 
+    When {{ person }} went to pick it up, it burst into flames in a totally
+    {{ adjective }} way.
 </body>
-<!-- </html> -->
